src/components/Footer/style.css
.footer {
    background-color: #232323;
    color: white;
    width: 100%;
    height: 16svh;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    margin-top: 1vh;
    position: relative;
    z-index: 3000;
}

.footer-text {
    display: flex;
    margin-top: 30px;
    color: var(--text-color);
}

.footer-img {
    width: 50px;
    height: 50px;
    margin-bottom: 20px;
    filter: invert(100%) sepia(10%) saturate(150%) hue-rotate(180deg) brightness(120%) contrast(90%);
}

.source-code {
    color: white;
    font-size: 30px;
    display: flex;
    position: absolute;
    right: 40px;
    top: 50%;
    transform: translateY(-50%);
}

